v 1.1 double done task fixed

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             return (
             <div className="todo" onClick={deteleIt}>
                 {text}
-                <input type="checkbox" onChange={deteleIt} />
+                <input type="checkbox"/>
             </div>
             );
         };
