v 1.2 body background-color changed

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <div id="root"></div>
 
     <style>
+      body {
+        background-color: #23395B;
+      }
       main {
         background-color: #FFFD98;
         padding: 2rem;
